// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a Masonry container with items 1`] = `
<div>
  <div
    class="masonry"
    style="position: relative; height: 0px;"
  >
    <li
      style="margin-bottom: 30px; position: absolute; left: 0px; top: 0px;"
    >
      <div>
        <img
          src="http://lorempixel.com/300/200"
        />
      </div>
    </li>
    <li
      style="margin-bottom: 30px; position: absolute; left: 0px; top: 0px;"
    >
      <div>
        <img
          src="http://lorempixel.com/300/200"
        />
      </div>
    </li>
    <li
      style="margin-bottom: 30px; position: absolute; left: 0px; top: 0px;"
    >
      <div>
        <img
          src="http://lorempixel.com/300/200"
        />
      </div>
    </li>
  </div>
</div>
`;

exports[`Render an empty Masonry container 1`] = `
<div>
  <div
    class="masonry"
    style="position: relative; height: 0px;"
  />
</div>
`;
